sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:14: error: reassignment to val
      i=i+ecart
       ^