sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart = getNombreValeurs()
  var nbEchanges = 0
  while(ecart> 1 | nbEchanges < 1) {
    if(ecart>1) {
      ecart = (ecart.toDouble / 1.3).toInt
    }
    val i=0
    while(i+ecart < getNombreValeurs()) {
      if(plusPetit(i+ecart,i)) {
        echange(i,i+ecart)
      }
      i=i+ecart
    }
  }
}